# ohtu-miniprojekti

./: .coveragerc  .env  .gitignore  .pylintrc  README.md  log.html  output.xml  pyproject.toml  raportti.md  report.html  retro.md  tasks.py
.github/workflows/: main.yml  setup.yml
docs/: arkkitehtuuri.md  definition_of_done.md  kayntenteet.md  kaytanteet.md  kayttoohje.md
setup-action/: action.yml
src/: AppLibrary.py  app.py  config.py  console_io.py  main.py
src/entities/: cite.py
src/infrastructure/: bibtex_exporter.py  console_io.py  database.py  stub_io.py
src/repositories/: cite_repository.py  stub_cite_repository.py
src/services/: export_service.py  filter_service.py  logic.py
src/tests/: test_app.py  test_ui.py
src/tests/entities/: stub_io.py  test_cite.py
src/tests/infrastructure/: test_bibtex_exporter.py  test_database.py
src/tests/repositories/: test_cite_repository.py
src/tests/robot/: create_cite.robot  export_cite.robot  help_center.robot  list_cites.robot  remove_all.robot  remove_cite.robot  resource.robot  sample_cites.robot  search_cite.robot
src/tests/services/: test_export_service.py  test_filter_service.py  test_logic.py
src/tests/stubs/: stub_cite_repository.py
src/tests/ui/: test_ui.py
src/ui/: add_cite_view.py  export_cite_view.py  filter_cite_view.py  list_cite_view.py  remove_cite_view.py  search_cite_view.py  ui.py  view.py
