[tool.poetry]
name = "ohtu-miniprojekti"
version = "0.1.0"
description = "BibTeX-viitteinen hallintaohjelma"
authors = ["Essi, Jiahao, Onni, Ronja, Sanni"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
