[tool.poetry]
name = "ohtu-miniprojekti"
version = "0.1.0"
description = "BibTeX-viitteiden hallintaohjelma"
authors = ["Essi, Jiahao, Onni, Ronja, Sanni"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
invoke = "^2.2.0"
robotframework = "^6.1.1"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
black = "^23.11.0"
pytest = "^7.4.3"
isort = "^5.12.0"
coverage = "^7.3.2"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
